[package]
name = "airos_wmctrl"
description = "Fork of rust-wmctrl, with class names support"
repository = "https://github.com/madebyair/airos-wmctrl"

readme = "README.md"
keywords = ["wmctrl", "window", "manager", "wm", "linux"]
categories = ["api-bindings", "command-line-interface", "os::unix-apis", "os"]
license = "GPL-3.0-or-later"

version = "0.1.8"
authors = ["Robert Fuchs <RobertFuchs97@gmail.com>", "Oskar Nizioł <oskarniziol@gmail.com>"]
edition = "2018"

[lib]
name = "airos_wmctrl"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.4"
